--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
       <link rel="stylesheet" type="text/css" href="https://storage.frangky.me/css/style.css">
       <link rel="stylesheet" type="text/css" href="https://storage.frangky.me/css/font-awesome.css">
       <link rel="stylesheet" type="text/css" href="https://storage.frangky.me/css/animate.css">
-      <link rel="shortcut icon" href="https://storage.frangky.me/logo-bulat.jpg" type="image/x-icon">
+      <link rel="shortcut icon" href="https://storage.frangky.me/logo.jpg" type="image/x-icon">
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
